--- a/AKGRenderer.cbp
+++ b/AKGRenderer.cbp
@@ -13,6 +13,7 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
+					<Add option="-Og" />
 					<Add option="-g" />
 					<Add directory="include" />
 				</Compiler>
