--- a/AKGRenderer.cbp
+++ b/AKGRenderer.cbp
@@ -126,6 +126,7 @@
 		<Unit filename="include/ShaderProgram.hpp">
 			<Option virtualFolder="OpenGL Headers/" />
 		</Unit>
+		<Unit filename="include/Utils.hpp" />
 		<Unit filename="include/Vertex.hpp" />
 		<Unit filename="main.cpp" />
 		<Unit filename="shaders/fDisplayShader.txt">
@@ -155,6 +156,7 @@
 		<Unit filename="src/ShaderProgram.cpp">
 			<Option virtualFolder="OpenGL Sources/" />
 		</Unit>
+		<Unit filename="src/Utils.cpp" />
 		<Unit filename="src/Vertex.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
