--- a/AKGRenderer.cbp
+++ b/AKGRenderer.cbp
@@ -128,6 +128,7 @@
 		</Unit>
 		<Unit filename="include/Shading.hpp" />
 		<Unit filename="include/Texture.hpp" />
+		<Unit filename="include/TextureType.hpp" />
 		<Unit filename="include/Utils.hpp" />
 		<Unit filename="include/Vertex.hpp" />
 		<Unit filename="include/lodepng.h" />
