--- a/AKGRenderer.cbp
+++ b/AKGRenderer.cbp
@@ -118,6 +118,7 @@
 			<Option virtualFolder="OpenGL Headers/" />
 		</Unit>
 		<Unit filename="include/Model.hpp" />
+		<Unit filename="include/MonoTexture.hpp" />
 		<Unit filename="include/NormalTexture.hpp" />
 		<Unit filename="include/Renderer.hpp" />
 		<Unit filename="include/ShaderInfo.hpp">
@@ -156,6 +157,7 @@
 			<Option virtualFolder="OpenGL Sources/" />
 		</Unit>
 		<Unit filename="src/Model.cpp" />
+		<Unit filename="src/MonoTexture.cpp" />
 		<Unit filename="src/NormalTexture.cpp" />
 		<Unit filename="src/Renderer.cpp" />
 		<Unit filename="src/ShaderProgram.cpp">
